--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.6",
     "gulp": "^3.9.1",
+    "karma": "^3.0.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
