home页面没有完成

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "karma": "^3.0.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "time-formater": "^1.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
